<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_rectangle"
        android:paddingStart="12dp"
        android:paddingTop="7dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        android:text="@string/_0_1000"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHeight" />

    <Button
        android:id="@+id/button_first"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        android:text="@string/count"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHeight" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/counter_symbols"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Counter Symbols*"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_first"
        app:startIconDrawable="@drawable/ic_baseline_sort_by_alpha_24"
        app:suffixText="@string/symbols">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageview_first"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/space"
        android:src="@drawable/efb"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintEnd_toStartOf="@id/tvTopEnd"
        app:layout_constraintStart_toEndOf="@id/tvTopStart"
        app:layout_constraintTop_toBottomOf="@id/tvTopStart" />

    <TextView
        android:id="@+id/tvTopStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:text="@string/space"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TopStart" />

    <TextView
        android:id="@+id/tvTopEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:text="@string/space"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TopEnd" />

    <TextView
        android:id="@+id/tvBottomStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:text="@string/space"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="BottomStart" />

    <TextView
        android:id="@+id/tvBottomEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:text="@string/space"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="BottomEnd" />

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:textColor="@color/grey"
        android:text="@string/space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Center" />


</androidx.constraintlayout.widget.ConstraintLayout>